--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 	<title>The Powerpuff Girls</title>
 </head>
 <body>
+	<nav>
+		<ul>
+			<li><a href="/">Home</a></li>
+			<li><a href="/shows">Shows</a></li>
+			<!-- <li><a href="location.history()">Back</a></li> -->
+		</ul>
+	</nav>
 	<h1>Getting the set-up ready</h1>
 	<h3>The three PPG's are:
 		<em>
@@ -28,7 +35,6 @@
 		<li>Build the app</li>
 		<li>Deploy the app</li>
 	</ol>
-
 </body>
 </html>
 
