Added dummy test file and mocha to modules

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,8 @@
 					<li><del>Iterate over the data object</del></li>
 					<li>Make tests for the expected data</li>
 					<li>Style the data in a nice view</li>
+					<li>Make a thoughtful about and 404 page</li>
+					<li>Make a cool styled footer</li>
 					<li>Create documentation for the app</li>
 					<li>Build the app</li>
 					<li>Deploy the app</li>
