installed tailwindcss, added dynamic pages, added 404, added styling, removed about page

--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,15 @@
 			href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,900;1,500&family=Rampart+One&family=Stick+No+Bills:wght@500&family=Ubuntu:ital,wght@1,300&display=swap"
 			rel="stylesheet"
 		>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.0/tailwind.min.css" integrity="sha512-ksC7McuoU4VJ07WGtca5INyDRXzGsmhyEEJYzoWBkjC/KwuG+IK/pFnxJFNIGmOd8pmGexOxd3FziCPZXQJ4lA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.0/base.min.css" integrity="sha512-N6YfAFXd5MjcRm5DA1EL1pD4caRbuwURbh5+RQQ7LSqsZ6Qece1+x2ZjngX/QcH/2FJ8zhspE+nkSSKK1QjeoQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.0/components.min.css" integrity="sha512-f6TS5CFJrH/EWmarcBwG54/kW9wwejYMcw+I7fRnGf33Vv4yCvy4BecCKTti3l8e8HnUiIbxx3V3CuUYGqR1uQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.0/utilities.min.css" integrity="sha512-einsnY5Ti9WNRsxAwifno5lMOviZlMkkewp55Mi480T97asB8MBDxRvZLd93jX5yebFwygHb1KHhlajtS3aMsA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	</head>
 
 	<body>
 		<div id="header_container"></div>
-		<div id="page_container" class="container pageEntry">
+		<div id="page_container" class="pageEntry">
 			<center>
 				<img src="https://c.tenor.com/tEBoZu1ISJ8AAAAC/spinning-loading.gif" alt="A spinner GIF" />
 			</center>
@@ -30,9 +34,9 @@
 					<li><del>Fetch the API</del></li>
 					<li><del>Iterate over the data object</del></li>
 					<li>Make tests for the expected data</li>
-					<li>Style the data in a nice view</li>
-					<li>Make a thoughtful about and 404 page</li>
-					<li>Make a cool styled footer</li>
+					<li><del>Style the data in a nice view</del></li>
+					<li><del>Make a thoughtful 404 page</del></li>
+					<li><del>Make a cool styled footer</del></li>
 					<li>Create documentation for the app</li>
 					<li>Build the app</li>
 					<li>Deploy the app</li>
@@ -40,6 +44,6 @@
 			</div>
 		</div>
 
-		<div id="footer_container">Just a cool footah</div>
+		<div id="footer_container"></div>
 	</body>
 </html>
