--- a/src/index.html
+++ b/src/index.html
@@ -33,13 +33,13 @@
 					<li><del>Make a NodeJs server with routes</del></li>
 					<li><del>Fetch the API</del></li>
 					<li><del>Iterate over the data object</del></li>
-					<li>Make tests for the expected data</li>
+					<li><del>Make tests for the expected data</del></li>
 					<li><del>Style the data in a nice view</del></li>
 					<li><del>Make a thoughtful 404 page</del></li>
 					<li><del>Make a cool styled footer</del></li>
-					<li>Create documentation for the app</li>
-					<li>Build the app</li>
-					<li>Deploy the app</li>
+					<li><del>Create documentation for the app</del></li>
+					<li><del>Build the app</del></li>
+					<li><del>Deploy the app</del></li>
 				</ol>
 			</div>
 		</div>
