Fix build with babel-plugin-import dependency

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 		<script type="module" src="/app.js"></script>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		 <link rel="icon" type="image/x-icon" href="/assets/proff.png">
 		<link
 			href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,900;1,500&family=Rampart+One&family=Stick+No+Bills:wght@500&family=Ubuntu:ital,wght@1,300&display=swap"
 			rel="stylesheet"
